--- a/Analog_Pong_Game/Analog_Pong_Game.runs/impl_1/.vivado.begin.rst
+++ b/Analog_Pong_Game/Analog_Pong_Game.runs/impl_1/.vivado.begin.rst
@@ -1,10 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado.bat" Owner="cnaught1" Host="ECE-PHO115-02" Pid="17308" HostCore="0" HostMemory="0">
-    </Process>
-</ProcessHandle>
-<?xml version="1.0"?>
-<ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado.bat" Owner="cnaught1" Host="ECE-PHO115-02" Pid="19296" HostCore="0" HostMemory="0">
+    <Process Command="vivado.bat" Owner="cnaught1" Host="ECE-PHO115-22" Pid="18080" HostCore="12" HostMemory="016893947904">
     </Process>
 </ProcessHandle>
